// Android Auto Protocol Buffer Definitions
// https://github.com/mrmees/open-android-auto
// SPDX-License-Identifier: GPL-3.0-or-later
//
// Validated against APK v16.1 classes xnd/xmw/xnc (proto2).
// Known: field 4 of xnd is MAP type_id=49 in proto-lite (reported as group).
// We model it as repeated message, which is wire-compatible.

syntax="proto2";

package oaa.proto.data;

// APK class: xnd — single distance display (primary/secondary text + timestamp)
message NavigationDistanceDisplay
{
    required string primary_text = 1;
    optional string secondary_text = 2;
    optional int64 update_timestamp = 3;
    repeated DistanceLabel labels = 4;  // APK: MAP type_id=49 (xnc entry class)
}

// APK class: xmw — distance value with unit info
message NavigationDistanceValue
{
    required int64 raw_meters = 1;
    required fixed32 value = 2;
    required fixed32 unit = 3;
}

// APK class: xnc — distance label (fields 5-8, map entry with non-standard keys)
message DistanceLabel
{
    required string label = 5;
    required string unit_text = 6;
    optional string extra = 7;
    required int32 label_type = 8;
}
